--- a/Recipe-Organizer-Frontend/app/styles/main.css
+++ b/Recipe-Organizer-Frontend/app/styles/main.css
@@ -2,7 +2,31 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+
+
 }
+
+.mainBackGround{
+    background: url(../images/garlic.jpg) no-repeat center center fixed;
+    background-size:cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0;
+    z-index: -1;
+
+}
+.main{
+    text-align: center;
+    color:#ffffff;
+    font-size: 36px;
+    margin-top: 400px;
+    text-shadow: 1px 1px #000;
+
+
+}
+
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -14,7 +38,7 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
+
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
@@ -28,7 +52,6 @@ body {
 .footer {
   padding-top: 19px;
   color: #777;
-  border-top: 1px solid #e5e5e5;
 }
 
 /* Customize container */
