--- a/Recipe-Organizer-Frontend/app/views/main.html
+++ b/Recipe-Organizer-Frontend/app/views/main.html
@@ -1,1 +1,18 @@
-<div ng-repeat="recipe in recipes"><a href="#/recipes/{{ recipe.id }}">{{ recipe.name }}</a></div>
+
+<div class ="mainBackGround"></div>
+
+<div class="main"> Find and share your favorite recipes ! </div>
+
+<style>
+    .nav-pills > li {
+        font-size: 24px;
+    }
+
+    .nav-pills.pull-right {
+        float: none !important;
+        text-align: center;
+        display: block;
+        margin: auto;
+        width: 490px;
+    }
+</style>
