--- a/Recipe-Organizer-Frontend/app/views/recipe-detail.html
+++ b/Recipe-Organizer-Frontend/app/views/recipe-detail.html
@@ -9,9 +9,10 @@
 <br>
 <label>Ingredients: </label>
 <ul>
-    <li ng-repeat="ingredient in recipe.ingredients">{{ ingredient }}</li>
+    <li ng-repeat="ingredient in recipe.ingredients">{{ ingredient.name}}</li>
 </ul>
 
 
 
 <button class="btn btn-sm btn-danger fa fa-trash-o" ng-click="deleteRecipe()"> Delete</button>
+
